# SlicerScapularMorphology

./: CMakeLists.txt  README.md
ScapularMorphology/: CMakeLists.txt  ScapularMorphology.py
ScapularMorphology/Resources/UI/: ScapularMorphology.ui
ScapularMorphology/Scripts/: scapularmorphology_inference.py
